# graphql-task-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  context.py  database.py  main.py
app/models/: __init__.py  project.py  task.py  user.py
app/schema/: __init__.py  dataloaders.py
app/schema/mutations/: task.py
app/schema/queries/: task.py
app/schema/types/: __init__.py  enums.py  errors.py  project.py  task.py  user.py
app/services/: exceptions.py  task_service.py  validators.py
migrations/: env.py
migrations/versions/: 001_initial.py
scripts/: benchmark.py  seed.py
tests/: conftest.py  test_graphql.py  test_integration.py  test_task_service.py
