[project]
name = "lush-assessment"
version = "0.1.0"
description = "Task Management GraphQL API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "strawberry-graphql[fastapi]>=0.243.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "uvicorn[standard]>=0.30.0",
    "structlog>=24.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes (unused imports, undefined names)
    "I",   # isort
    "UP",  # pyupgrade (modernise syntax for py311)
]
ignore = [
    "E711",  # comparison to None (SQLAlchemy uses == None in filter clauses)
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
combine-as-imports = true
